<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".sideeffects.SideEffectSelectionActivity">

    <Button
        android:id="@+id/btnWhatAreSideEffect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/what_are_side_effects"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLaunchedEffect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/launched_effect"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnRememberCoroutineScope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/remember_coroutine_scope"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnDisposableEffect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/disposable_effect"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSideEffect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/side_effect"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnRememberUpdatedState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/remember_updated_state"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnDerivedStateOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/derived_state_of"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnProduceStateOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/produce_state_of"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSnapshotFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/snap_shot_flow"
        android:textColor="@color/white"
        android:textSize="16sp" />


</androidx.appcompat.widget.LinearLayoutCompat>