<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStateExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/state_example"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnRecompositionExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/recomposition_example"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSideEffectExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/side_effect_example"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnNeedOfStateHoisting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/need_of_state_hoisitng"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnStateHoisting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/state_hoisting"
        android:textColor="@color/white"
        android:textSize="16sp" />

</androidx.appcompat.widget.LinearLayoutCompat>